fix: spacing

--- a/frontend/src/components/Hero/hero.scss
+++ b/frontend/src/components/Hero/hero.scss
@@ -7,7 +7,7 @@
 
 header {
 	&.hero {
-		padding: 13vh $text-spacer 20vh;
+		padding: 10vh $text-spacer 16vh;
 		background-image: url('../../assets/bg.png');
 		background-color: #0000;
 		background-repeat: no-repeat;
@@ -16,7 +16,7 @@ header {
 		@include full-width();
 
 		@include breakpoint-min(lg) {
-			padding-top: 23vh;
+			padding-top: 18vh;
 			padding-bottom: 29vh;
 		}
 
@@ -77,7 +77,7 @@ header {
 			}
 
 			@include breakpoint-min(md) {
-				width: 657px;
+				width: 863px;
 				margin-left: auto;
 				margin-right: auto;
 			}
